fixed horizontal scrollbar appearing

--- a/src/styles/appStyles.css
+++ b/src/styles/appStyles.css
@@ -3,3 +3,7 @@
 @import url("searchPage.css");
 @import url("trainingPage.css");
 @import url("loginStyles.css");
+
+body{
+    overflow-x:hidden;
+}
